--- a/src/app/entry-ing/entry-ing.component.html
+++ b/src/app/entry-ing/entry-ing.component.html
@@ -4,6 +4,8 @@
 
       <h2 class="entry-info-title white">Ми знову прибрали все зайве, щоб ви отримали кращий досвід.</h2>
 
+      <img class="resp-entry-info-img" src="../assets/images/cat.webp" alt="">
+
       <p class="entry-info-text white">Залиште номер телефону, і ми надішлемо посилання на додаток, де можна відкрити рахунок ФОП</p>
 
       <form action="" class="entry-info-form">
