--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -1,9 +1,9 @@
 <section class="features">
 
-    <h2 class="features-titl">Ви так довго <br> цього чекали</h2>
-
     <ul class="features-list">
 
+    <h2 class="features-titl">Ви так довго <br> цього чекали</h2>
+    
       <li class="features-item">
 
         <div class="icon-container">
@@ -12,7 +12,13 @@
 
         </div>
 
-        <p>Повністю дистанційне обслуговування: не потрібно відвідувати точку видачі або звертатися до відділення</p>
+        <div class="double-text-feature-item">
+
+        <p>Повністю дистанційне обслуговування:</p>
+
+        <p class="feature-list-text-light">Не потрібно відвідувати точку видачі або звертатися до відділення</p>
+
+        </div>
 
       </li>
 
@@ -24,9 +30,13 @@
 
         </div>
 
+        <div class="double-text-feature-item">
+
         <p>Керування всіма рахунками monobank в одному додатку </p>
 
         <p class="feature-list-text-light">Один додаток для ФОП і особистого рахунку</p>
+
+        </div>
 
       </li>
 
@@ -38,9 +48,13 @@
 
         </div>
 
+        <div class="double-text-feature-item">
+
         <p>Платежі з валютних рахунків 24/7/365, а не тільки з 10:00 до 15:00</p>
 
         <p class="feature-list-text-light">Не потрібно чекати поки відкриється міжбанк, щоб продати валюту. Валютообмін 24/7</p>
+
+        </div>
 
       </li>
 
