--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -93,6 +93,30 @@
         </ul>
   
       </nav>
+
+      <!--Mobile version elements-->
+
+      <nav class="resp-navbar">
+
+      <div class="hamburger">
+
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+
+      </div>
+
+      <p class="resp-logo white">
+
+        <span class="resp-logo-monobank">monobank</span> 
+        <br>
+        <span class="resp-logo-ub">Universal Bank</span> 
+
+      </p>
+
+      <span class="resp-lang">УКР</span>
+
+    </nav>
   
     </section>
   
