--- a/src/app/tariffs/tariffs.component.html
+++ b/src/app/tariffs/tariffs.component.html
@@ -28,43 +28,43 @@
 
       <tr class="trow2">
 
-        <th class="side-head"><p>Вартість відкриття рахунку</p></th>
+        <th class="side-head"><p class="side-head-p">Вартість відкриття рахунку</p></th>
 
         <td class="monobank-tr-m tcol1 white">0 грн</td>
 
         <td class="tcol2">0 грн онлайн <br> 100 грн у відділенні</td>
 
-        <td>1 грн</td>
+        <td class="tcol3">1 грн</td>
 
-        <td>50 грн</td>
+        <td class="tcol4">50 грн</td>
 
       </tr>
 
       <tr class="trow3">
 
-        <th class="side-head"><p>Вартість обслуговування рахунку на місяць</p></th>
+        <th class="side-head"><p class="side-head-p">Вартість обслуговування рахунку на місяць</p></th>
 
         <td class="monobank-tr-m tcol1 white">0 грн</td>
 
         <td class="tcol2">125 грн</td>
 
-        <td>100 грн</td>
+        <td class="tcol3">100 грн</td>
 
-        <td>129 грн</td>
+        <td class="tcol4">129 грн</td>
 
       </tr>
 
       <tr class="trow4">
 
-        <th class="side-head"><p>Комісія за переказ на рахунки інших банків</p></th>
+        <th class="side-head"><p class="side-head-p">Комісія за переказ на рахунки інших банків</p></th>
 
         <td class="monobank-tr-b tcol1 white">0 грн</td>
 
         <td class="tcol2">3 грн</td>
 
-        <td>3 грн</td>
+        <td class="tcol3">3 грн</td>
 
-        <td>2 грн</td>
+        <td class="tcol4">2 грн</td>
 
       </tr>
 
