--- a/src/app/cabinet/cabinet.component.css
+++ b/src/app/cabinet/cabinet.component.css
@@ -73,7 +73,9 @@
 
 @media (max-width: 600px){
     h2{
-        font-size: 22px;
+        font-size: 30px;
+        font-weight: 900;
+        letter-spacing: -1px;
         line-height: 35px;
     }
 }
