--- a/src/app/entry-ing/entry-ing.component.css
+++ b/src/app/entry-ing/entry-ing.component.css
@@ -126,7 +126,9 @@ input::placeholder{
     }
 
     h2{
-        font-size: 22px;
+        font-size: 30px;
+        font-weight: 900;
+        letter-spacing: -1px;
         line-height: 35px;
     }
 }
