--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -2,7 +2,7 @@
 
     <ul class="features-list">
 
-    <h2 class="features-titl">Ви так довго <br> цього чекали</h2>
+    <h2 class="features-titl">Ви так довго цього чекали</h2>
     
       <li class="features-item">
 
@@ -12,7 +12,7 @@
 
         </div>
 
-        <div class="double-text-feature-item">
+        <div class="text-feature-item">
 
         <p>Повністю дистанційне обслуговування:</p>
 
@@ -30,7 +30,7 @@
 
         </div>
 
-        <div class="double-text-feature-item">
+        <div class="text-feature-item">
 
         <p>Керування всіма рахунками monobank в одному додатку </p>
 
@@ -48,7 +48,7 @@
 
         </div>
 
-        <div class="double-text-feature-item">
+        <div class="text-feature-item">
 
         <p>Платежі з валютних рахунків 24/7/365, а не тільки з 10:00 до 15:00</p>
 
@@ -66,8 +66,12 @@
 
         </div>
 
+        <div class="text-feature-item">
+
         <p>Окремий бухгалтерський веб-кабінет . Можна додати до двох додаткових номерiв телефону для роботи у веб-кабінеті з рахунком ФОП</p>
-      
+          
+        </div>
+
       </li>
 
       <li class="features-item">
@@ -78,7 +82,11 @@
 
         </div>
 
+        <div class="text-feature-item">
+
         <p>Вигідний курс обміну валют</p>
+      
+        </div>
 
       </li>
 
@@ -90,7 +98,11 @@
 
         </div>
 
+        <div class="text-feature-item">
+
         <p>Дружній фінансовий моніторинг і валютний контроль </p>
+      
+        </div>
 
       </li>
 
