--- a/src/app/fop/fop.component.css
+++ b/src/app/fop/fop.component.css
@@ -10,6 +10,7 @@
 
 .fop-title{
     padding-bottom: 40px;
+    width: 100%;
 }
 
 ol{
@@ -37,3 +38,166 @@ ol li::before{
     color: #faf352;
     font-size: 20px;
 }
+
+@media(max-width: 1263px){
+    ol li{
+        padding-right: 64px;
+
+        width: 300px;
+    }
+
+    ol li::before{
+        left: -50px;
+        bottom: 66px;
+    }
+}
+
+@media(max-width: 1116px){
+    ol li{
+        padding-right: 74px;
+    }
+}
+
+@media(max-width: 1083px){
+    .fop-title{
+        width: 600px;
+        margin: auto;
+    }
+
+    .icon-container{
+        margin-right: 20px;
+
+        width: 68px;
+        height: 68px;
+    }
+
+    .icon{
+        height: 35px;
+        width: 35px;
+    }
+
+    ol{
+        display: block;
+        margin: 0 auto;
+
+        width: 600px;
+    }
+
+    ol li{
+        width: 600px;
+        margin: 0 auto;
+        display: flex;
+        padding-top: 80px;
+    }
+
+    p{
+        margin: auto 0 0 20px;
+        width: 60%;
+    }
+
+    ol li::before{
+        font-size: 16px;
+
+        left: 108px;
+        bottom: 50px;
+    }
+}
+
+@media (max-width: 825px){
+    section{
+        padding-right: 74px;
+    }
+
+    ol{
+        width: 600px;
+        padding-left: 0;
+    }
+
+    ol li{
+        width:100%;
+        padding-right: 0;
+        padding-top: 70px;
+    }
+
+    ol li::before{
+        bottom: 48px;
+    }
+
+    .fop-title{
+        width: 600px;
+    }
+
+    
+}
+
+@media(max-width: 758px){
+    .fop-title{
+        width: 100%;
+    }
+
+    .icon-container{
+        width: 58px;
+        height: 58px;
+    }
+
+    .icon{
+        height: 25px;
+        width: 25px;
+    }
+
+    ol{
+        width: 100%;
+    }
+
+    p{
+        margin-bottom: -20px;
+    }
+
+    ol li::before{
+        bottom: 38px;
+        left: 98px;
+    }
+}
+
+@media (max-width: 668px){
+    ol li{
+        padding-top: 100px;
+    }
+
+    p{
+        position: absolute;
+        margin-top: 25px;
+        margin-left: 78px;
+    }
+
+    ol li::before{
+        left: 78px;
+    }
+}
+
+@media(max-width: 600px){
+    .fop{
+        padding-top: 50px;
+    }
+
+    .fop-title{
+        padding-bottom: 0px;
+    }
+
+    h2{
+        font-size: 30px;
+        font-weight: 900;
+        letter-spacing: -1px;
+        line-height: 35px;
+    }
+
+}
+
+@media (max-width: 419px){
+    ol li{
+        padding-top: 130px;
+    }
+}
+
+
+
