--- a/src/app/tariffs/tariffs.component.css
+++ b/src/app/tariffs/tariffs.component.css
@@ -4,6 +4,7 @@
 .tariffs{
     padding-top: 150px;
     padding-bottom: 150px;
+    padding-right: 74px;
 }
 
 table{
@@ -97,6 +98,7 @@ tr{
 }
 
 .under-table-link{
+    display: block;
     font-size: 14px;
     color: red;
 }
@@ -104,6 +106,60 @@ tr{
 .table-qoute{
     display: flex;
     justify-content: flex-end;
-
-    padding-right: 100px;
 }
+
+@media (max-width: 1083px){
+    .trow1, .tcol2, .tcol3, .tcol4{
+        display: none;
+    }
+
+    .monobank-th, .monobank-tr-m, .monobank-tr-b{
+        background-color: inherit;
+    }
+
+    .monobank-tr-m{
+        border-bottom: none;
+    }
+
+    .white{
+        color: black;
+    }
+
+    .tariffs-title{
+        width: 530px;
+        margin: auto;
+        padding-bottom: 50px;
+    }
+
+    table{
+        width: 530px;
+        margin: auto;
+    }
+
+    .table-qoute{
+        display: block;
+    }
+
+    .under-table-link, .table-qoute{
+        width: 530px;
+        margin: auto;
+
+        padding-top: 30px;
+    }
+
+}
+
+@media(max-width: 825px){
+
+    .tariffs-title, table, .under-table-link, .table-qoute{
+        width: 100%;
+    }
+}
+
+@media(max-width: 469px){
+    .side-head-p{
+        font-size: 12px;
+        color: rgb(110, 109, 109);
+    }
+}
+
